~Polished credits attributions & landing pages ~Modified greetings message timing ~Fixed navbar overlapping

--- a/src/comps/Navbar.module.css
+++ b/src/comps/Navbar.module.css
@@ -1,5 +1,6 @@
 header {
     position: fixed;
+    z-index: 1000;
     right: 0;
     left: 0;
     top: 0;
